moved styles to seperate stylesheet

--- a/home.html
+++ b/home.html
@@ -4,163 +4,10 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="css/normalize.css"/>
-<style>
-body {
-    width: 100%; height: 100%;
-}
-
-.home {
-    margin:auto;
-    width: 1280px;
-    height: 800px;
-    background-color: #333;
-    display: flex;
-}
-.Images {
-    position: absolute;
-    left: -188px;
-    top: -204px;
-    width: 4928px;
-    height: 1868px;
-    z-index: 132;
-}
-.Image_Mask___Top {
-    background-color: rgb(147, 149, 152);
-    position: absolute;
-    left: 187px;
-    top: 173px;
-    width: 556px;
-    height: 381px;
-    z-index: 130;
-}
-.Image_Mask___Middle {
-    background-image: url("Image Mask - Middle.png");
-    position: absolute;
-    left: 187px;
-    top: 414px;
-    width: 556px;
-    height: 381px;
-    z-index: 127;
-}
-.Image_Mask___Bottom {
-    background-color: rgb(147, 149, 152);
-    position: absolute;
-    left: 188px;
-    top: 656px;
-    width: 555px;
-    height: 380px;
-    z-index: 125;
-}
-.Header {
-    position: absolute;
-    left: -188px;
-    top: -204px;
-    width: 4928px;
-    height: 1868px;
-    z-index: 123;
-}
-.home-nav{
-    font-size: 14px;
-    font-family: "Roboto Slab";
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    line-height: 1;
-    text-align: center;
-    text-decoration:none;
-}
-
-.home-nav a {
-    color: rgb(255, 255, 255); text-decoration: none;
-}
-.Main {
-    position: absolute;
-    left: -188px;
-    top: -204px;
-    width: 4928px;
-    height: 1868px;
-    z-index: 120;
-}
-.[YOUR_LOGO_HERE] {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 4928px;
-    height: 1868px;
-    z-index: 119;
-}
-.COMPANY {
-    font-size: 87px;
-    font-family: "Roboto Slab";
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    line-height: 1.65;
-    text-align: center;
-    position: relative;
-    top: 205px;
-}
-.NAME_HERE {
-    font-size: 52px;
-    font-family: "Roboto Slab";
-    color: rgb(255, 255, 255);
-    line-height: 1.71;
-    text-align: center;
-    position: relative;
-    top: 104px;
-    font-weight: 400;
-}
-#tagline {
-    font-size: 42px;
-    font-family: "Roboto Slab";
-    color: rgb(255, 255, 255);
-    line-height: 3.093;
-    text-align: center;
-}
-    .home-images-left {
-        max-width: 43.4%;
-        display: flex;
-        flex-direction: column;
-        overflow: hidden;
-        height: 100%;
-    }
-    .home-images-left img {
-        position:relative;
-    }
-
-    .home-images-left img:nth-child(1){
-        top: -31px;
-    }
-
-.home-images-left img:nth-child(2){
-    top: -170px;
-}
-
-    .home-images-left img:nth-child(3) {
-        top: -310px;
-    }
-
-    .home-right {
-        height: 100%; width: 56.6%;
-    }
-
-    .home-nav{
-        width: 173px;
-        height: 12px;
-        float: right;
-        position: relative;
-        left: -74px;
-        top: 58px;
-    }
-
-#name-and-tagline {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-}
-</style>
+    <link rel="stylesheet" href="css/home-style.css"/>
 </head>
 <body>
-    <div class="home" style="background: url(PSDs/home.png)">
+    <div class="home">
         <div class="home-images-left">
             <img src="img/home-shape.svg"/>
             <img src="img/home-shape.svg"/>
