full width home

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             </nav>
             <div id="name-and-tagline">
                 <div id="name">
-                    <h1 class="COMPANY">COMPANY</h1>
+                    <h1 class="COMPANY">COMPANY</h1><br>
                     <h2 class="NAME_HERE">NAME HERE</h2>
                 </div>
                 <div id="tagline-div">
