--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
       <header>
         <div id="headings">
             <h1>COMPANY</h1>
-            <h2>NAME HERE</h2>
+            <h2 id="services-page-h2">NAME HERE</h2>
           </div>
           <nav>
             <a href="#">PRODUCTS</a> |
